argocd_applications/monitoring/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: monitoring
  labels:
    app: jaeger
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8888"
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
  - name: query
    protocol: TCP
    port: 16686
    targetPort: 16686
  - name: otlp-grpc
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: otlp-http
    protocol: TCP
    port: 4318
    targetPort: 4318
